HNC-484: fix for excess amount spacing on firefox

--- a/src/main/webapp/bundles/home/less/results.less
+++ b/src/main/webapp/bundles/home/less/results.less
@@ -452,6 +452,9 @@
 				}
 
 				.excessTitle {
+					display: block;
+					margin-bottom: 2px;
+
 					br {
 						display: none;
 					}
